docs(contrib): lock in Phase A decisions
- preview-discovery ships library + CLI main
- daemon-launch-builder stays generic (Android classpath layering
  stays in the gradle plugin)
- Amper integration is shell-scripts-around-java-jar, not plugins
- separate :render-cli, not DaemonMain --render-once